# DuRuoTing_

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml  杜若汀.txt
src/plugins/: basic.py  duruoting_chat.py  gaokao_admission.py  group_title.py  school_abbr.py  state.py  xiaoting_application.py
tmp/gaokao_admission_integrated_20250624/: henan_major_group_admission_scores_2025.csv  manifest.json
