[project]
name = "qq-group-bot"
version = "0.1.0"
description = "A starter NoneBot2 QQ group bot powered by LLOneBot."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "nonebot2[fastapi]<3.0.0,>=2.4.3",
    "nonebot-adapter-onebot<3.0.0,>=2.4.6",
    "nonebot-plugin-apscheduler<1.0.0,>=0.5.0",
    "nonebot-plugin-send-anything-anywhere>=0.7.1",
    "nonebot_plugin_withdraw>=0.4.1",
    "nonebot-plugin-whateat-pic>=1.5.7",
    "nonebot-plugin-today-waifu>=0.1.10",
    "httpx<1.0,>=0.27",
    "nonebot-plugin-wordsnorote>=0.0.2",
    "nonebot-plugin-reboot>=0.1.4",
    "nonebot-plugin-ncm>=1.6.18",
    "nonebot-plugin-parser>=2.6.3",
    "nonebot-plugin-alconna>=0.62.0",
    "nonebot-plugin-uninfo>=0.11.0",
    "nonebot-plugin-duel>=0.1.2",
    "nonebot-plugin-steam-info>=1.3.5",
    "nonebot-plugin-maimaidx>=2.1.11",
]

[tool.nonebot]
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-send-anything-anywhere = ["nonebot_plugin_saa"]
nonebot_plugin_withdraw = ["nonebot_plugin_withdraw"]
nonebot-plugin-whateat-pic = ["nonebot_plugin_whateat_pic"]
nonebot-plugin-today-waifu = ["nonebot_plugin_today_waifu"]
nonebot-plugin-wordsnorote = ["nonebot_plugin_wordsnorote"]
nonebot-plugin-reboot = ["nonebot_plugin_reboot"]
nonebot-plugin-ncm = ["nonebot-plugin-ncm"]
nonebot-plugin-parser = ["nonebot_plugin_parser"]
nonebot-plugin-alconna = ["nonebot_plugin_alconna"]
nonebot-plugin-uninfo = ["nonebot_plugin_uninfo"]
nonebot-plugin-duel = ["nonebot_plugin_duel"]
nonebot-plugin-steam-info = ["nonebot_plugin_steam_info"]
nonebot-plugin-maimaidx = ["nonebot_plugin_maimaidx"]

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
